[package]
name = "bugsalot"
version = "0.1.1"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"
description = "Debugging macros and APIs for shipping stable codebases."
documentation = "https://docs.rs/bugsalot/"
repository = "https://github.com/MaulingMonkey/bugsalot"
readme = "README.md"
keywords = ["debug", "macros"]
license = "MIT OR Apache-2.0"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE", "/Readme.md"]

[lib]
crate-type = ["rlib", "cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
