[package]
name = "bugsalot"
version = "0.2.0"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"
description = "Debugging macros and APIs for shipping stable codebases."
documentation = "https://docs.rs/bugsalot/"
repository = "https://github.com/MaulingMonkey/bugsalot"
readme = "Readme.md"
keywords = ["debug", "macros"]
categories = ["development-tools::debugging"]
license = "MIT OR Apache-2.0"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE-MIT", "/LICENSE-APACHE", "/Readme.md"]

[features]
default         = []

wasm-bindgen    = ["wasm_bindgen", "js-sys"]
stdweb          = ["stdweb0"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_bindgen    = { version = "0.2", optional = true, package = "wasm-bindgen" }
js-sys          = { version = "0.3", optional = true }
stdweb0         = { package = "stdweb", optional = true, version = "0.4" }
